name:                blockchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blockchain#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable blockchain
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , bytestring
                     , cryptonite
                     , lens
                     , lens-aeson
                     , wreq
                     , string-conversions
                     , aeson
                     , memory
                     , text
                     , base64-bytestring
                     , haskeline
                     , aeson-pretty

